--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "."
+  "homepage": ".",
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  }
 }
