--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "handsontable": "^11.1.0",
     "immutability-helper": "^3.1.1",
     "jshint": "^2.12.0",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-table": "^7.6.2",
     "sanitize-html": "^2.1.2",
+    "sass": "^1.48.0",
     "typescript": "^4.2.3",
     "webfontloader": "^1.6.28",
     "xlsx": "^0.17.5"
