--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
+  "homepage": "https://metaldrgn.github.io",
   "optionalDependencies": {
     "fsevents": "^2.3.2"
   }
